Добавил лимит на запросы

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/applicants_parsing
 spring.datasource.username=postgres
 spring.datasource.password=admin
 server.port=8081
+spring.datasource.hikari.connectionTimeout=0
+spring.datasource.hikari.idleTimeout=600000
