--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,4 @@ spring.datasource.password=admin
 server.port=8081
 spring.datasource.hikari.connectionTimeout=0
 spring.datasource.hikari.idleTimeout=600000
+spring.datasource.hikari.maximum-pool-size=100000
