--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>3.2.4</version>
         <relativePath/> <!-- lookup parent from repository -->
+
+
     </parent>
     <groupId>com.example</groupId>
     <artifactId>ServerParsing</artifactId>
@@ -16,6 +18,15 @@
     <properties>
         <java.version>17</java.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>AsposeJavaAPI</id>
+            <name>Aspose Java API</name>
+            <url>https://repository.aspose.com/repo/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,6 +70,13 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.aspose</groupId>
+            <artifactId>aspose-cells</artifactId>
+            <version>21.6</version>
+        </dependency>
+
     </dependencies>
 
     <build>
