--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>aspose-cells</artifactId>
             <version>21.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-core</artifactId>
+            <version>6.1.5</version>
+        </dependency>
 
     </dependencies>
 
